--- a/code/code.ioc
+++ b/code/code.ioc
@@ -9,8 +9,8 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
 Mcu.IP6=USART1
 Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
@@ -52,14 +52,10 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_Speed
-PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_Speed
-PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.Locked=true
-PA1.Signal=GPIO_Output
+PA1.Signal=S_TIM2_CH2
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -72,22 +68,33 @@ PA7.Signal=S_TIM3_CH2
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB12.GPIOParameters=GPIO_Speed
+PB12.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB12.Locked=true
 PB12.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Speed
+PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB13.GPIO_PuPd=GPIO_PULLUP
 PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB13.Locked=true
 PB13.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB6.Locked=true
-PB6.Signal=S_TIM4_CH1
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB7.GPIO_PuPd=GPIO_PULLUP
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB7.Locked=true
-PB7.Signal=S_TIM4_CH2
-PB9.GPIOParameters=GPIO_Speed
+PB7.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
@@ -122,7 +129,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -144,12 +151,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
-SH.S_TIM4_CH1.ConfNb=1
-SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
-SH.S_TIM4_CH2.ConfNb=1
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=EncoderMode
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,OCMode_PWM-PWM Generation2 CH2
 TIM3.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM2
